[gd_scene load_steps=8 format=3 uid="uid://bu0btelvd2py6"]

[ext_resource type="Script" uid="uid://dvmnbpnp8ragx" path="res://scripts/Enemies/enemy.gd" id="1_7p1mj"]
[ext_resource type="Texture2D" uid="uid://cm1d1ngaercti" path="res://Images/NPC's and player/enemy_sprite.png" id="2_md0e3"]
[ext_resource type="PackedScene" uid="uid://blr5ejo1re2gt" path="res://scenes/Enemies/enemyhealthbar.tscn" id="4_5uy6h"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7p1mj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7p1mj"]
radius = 5.608826

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_md0e3"]

[sub_resource type="ViewportTexture" id="ViewportTexture_4ra3w"]
viewport_path = NodePath("HealthBar3D/SubViewport")

[node name="Enemy" type="CharacterBody3D" groups=["Enemies"]]
collision_layer = 3
script = ExtResource("1_7p1mj")
max_health = 100
fireball_damage = 5
fire_damage = 5
waterblast_movement = 0.5
blast_speed = 15.0
rock = 50

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 0, 0)
pixel_size = 0.1
billboard = 1
texture_filter = 0
texture = ExtResource("2_md0e3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_7p1mj")

[node name="Follow_area" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Follow_area"]
shape = SubResource("SphereShape3D_7p1mj")

[node name="Damage_area" type="Area3D" parent="."]

[node name="Damage_collission" type="CollisionShape3D" parent="Damage_area"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_md0e3")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="HealthBar3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4781568, 0)
billboard = 1
texture = SubResource("ViewportTexture_4ra3w")

[node name="SubViewport" type="SubViewport" parent="HealthBar3D"]
size = Vector2i(75, 10)

[node name="enemyhealthbar" parent="HealthBar3D/SubViewport" instance=ExtResource("4_5uy6h")]
offset_right = 75.0
offset_bottom = 10.0

[node name="Blast_Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="Water_Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Follow_area" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Follow_area" to="." method="_on_area_3d_body_exited"]
[connection signal="child_entered_tree" from="Follow_area/CollisionShape3D" to="." method="_on_collision_shape_3d_child_entered_tree"]
[connection signal="body_entered" from="Damage_area" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="Damage_area" to="." method="_on_damage_area_body_exited"]
[connection signal="timeout" from="Blast_Timer" to="." method="_on_blast_timer_timeout"]
[connection signal="timeout" from="Water_Timer" to="." method="_on_water_timer_timeout"]
